fix input layout on firefox

--- a/components/RegistrationForm/index.module.css
+++ b/components/RegistrationForm/index.module.css
@@ -3,20 +3,18 @@
 .input {
   border-radius: 8px 0px 0px 8px;
   width: 343px;
-  height: 60px;
+  padding: 18px 0px;
   border: none;
   text-indent: 20px;
   font-size: 16px;
+  line-height: 19px;
   color: rgba(255, 255, 255, 0.9);
   border: none;
-
   background: rgba(255, 255, 255, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.4);
   box-sizing: border-box;
-  backdrop-filter: blur(6px);
-  /* Note: backdrop-filter has minimal browser support */
-
   border-radius: 8px 0px 0px 8px;
+  box-shadow: none;
 }
 
 .input_secondary {
@@ -46,7 +44,7 @@
 
 .button {
   width: 160px;
-  height: 60px;
+  padding: 19px 0px;
   background: #fefefe;
   border-radius: 0px 8px 8px 0px;
   border: none;
